<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="data"
            type="com.maritesallen.almanac2020.ui.access.registrationFacebook.RegistrationFacebookViewModel" />
    </data>

<androidx.appcompat.widget.LinearLayoutCompat
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="7"
        style="@style/layoutDefault"
        android:orientation="vertical">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/facebook_screen_note"
                style="@style/textBody"
                android:layout_marginLeft="@dimen/layoutMarginDefault"
                android:layout_marginRight="@dimen/layoutMarginDefault"
                android:gravity="center"
                />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="8"
            android:orientation="vertical"
            android:padding="@dimen/card_outer_margin"
            android:gravity="center">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    style="@style/editTextBox"
                    android:inputType="textEmailAddress"
                    android:hint="@string/email"/>

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/birthDate"
                    android:onClick="@{(view) -> data.onDateClick(view)}"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    style="@style/editTextBox"
                    android:focusable="false"
                    android:inputType="date"
                    android:hint="@string/birthDate"/>
            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/birthTime"
                    android:onClick="@{(view) -> data.onTimeClick(view)}"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/editTextBox"
                    android:focusable="false"
                    android:inputType="date"
                    android:hint="@string/birthTime"/>
            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/country"
                    android:onClick="@{(view) -> data.onCountryClick(view)}"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/editTextBox"
                    android:focusable="false"
                    android:inputType="text"
                    android:hint="@string/country"/>
            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="0dp"
        style="@style/layoutDefault"
        android:layout_weight="5"
        android:gravity="center">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/login"
            android:onClick="@{(view) -> data.onLoginUpClick(view)}"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:layout_centerInParent="true"
            style="@style/button"
            android:layout_margin="@dimen/layoutMarginDefault"/>

    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.appcompat.widget.LinearLayoutCompat>
</layout>