<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="data"
            type="com.maritesallen.almanac2020.core.dialogs.premiumAlert.PremiumAlertViewModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="@dimen/card_corner_radius"
            style="@style/layoutDefault">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fillViewport="true"
                android:orientation="vertical">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_margin="@dimen/layoutMarginDefault"
                    android:gravity="center">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/textSubHeadingDark"
                        android:text="@string/premiumAlertTitle"/>

                        <androidx.appcompat.widget.LinearLayoutCompat
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:padding="@dimen/layoutMarginDefault">

                            <androidx.appcompat.widget.AppCompatTextView
                                android:id="@+id/body"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/premiumAlertBody"
                                style="@style/textBodyDark"
                                android:layout_marginBottom="2dp"
                                android:gravity="center"/>
                        </androidx.appcompat.widget.LinearLayoutCompat>
                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/cancelClose"
                        android:onClick="@{() -> data.onCancelClick()}"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/cancel"
                        style="@style/buttonAccept"/>

                    <TextView
                        android:layout_width="2dp"
                        android:layout_height="match_parent"/>

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/proceed"
                        android:onClick="@{() -> data.onProceedClick()}"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/purchase"
                        style="@style/buttonAccept"/>
                </androidx.appcompat.widget.LinearLayoutCompat>
            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.cardview.widget.CardView>
    </RelativeLayout>
</layout>